# serde_str_variant

./: Cargo.toml
