[package]
name = "serde_str_variant"
version = "0.1.0"
authors = ["Adilson Schmitt Junior <adilsonschj@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["serde", "deserialize", "serialize", "str", "string"]
categories = ["data-structures"]
description = "Simple de/se helpers to handle data that can be string as well as something else"
repository = "https://github.com/sirgallifrey/serde_str_variant"

[dependencies]
serde = { version = "1.0.117" }
serde-value = "0.7.0"

[dev-dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
eyre = "0.6.5"